fixed alignment of work logo

--- a/src/components/School.css
+++ b/src/components/School.css
@@ -1,5 +1,5 @@
 .divSchool {
-    margin: 10% auto;
+    margin: 50px auto;
     line-height: 20px;
 }
 
